# cell-simulator

./: .gitignore  CMakeLists.txt  cell.cc  cell.h  cell_buf.cc  cell_buf.h  cell_discharge_curve.cc  cell_discharge_curve.h  cell_discharge_curve.m  cell_discharge_curve_buf.cc  cell_discharge_curve_buf.h  cell_discharge_curve_point.h  cell_eq.m  cell_identifier_to_string.m  cell_points.cc  cell_points.h  cell_points_buf.cc  cell_points_buf.h  cell_voltage_interpolator.c  cell_voltage_interpolator.h  cells.cc  cells.h  error.c  error.h  floating_point_type.h  get_cell.m  interpolate_cell_voltage.c  interpolate_cell_voltage.h  lerp.c  lerp.cc  lerp.h  lerp_cell_voltage.c  lerp_cell_voltage.h  make_cell.m  module.cc  module.h  point.c  point.cc  point.h  rand.cc  (+9 more)
MATLAB/: cell_eq.m  cells_file_insert_cell.m  make_cell.m  read_cells.m  write_cells.m
tests/: CMakeLists.txt  read.cc  test_interpolate_cell_voltage.cc  test_lerp_cell_voltage.cc  test_libmodule.cc
